--- a/HLeOs/Cargo.toml
+++ b/HLeOs/Cargo.toml
@@ -5,6 +5,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[unstable]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
+
+[build]
+target = "x86_64-HLeos.json"
+
 [profile.dev]
 panic = "abort"
 
