--- a/HLeOs/Makefile
+++ b/HLeOs/Makefile
@@ -33,6 +33,7 @@ gdb-i386 : $(IMAGE_DIR)
 
 debug-loader : $(GDB_SCRIPT)
 	gdb -ix $(GDB_SCRIPT) \
+		-ex 'symbol $(BOOTLOADER_DIR)' \
 		-ex 'set tdesc filename target.xml' \
 		-ex 'target remote localhost:1234' \
 		-ex 'hb *0x7c00' \
